--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,6 +1,6 @@
-baseURL = "http://example.org/"
+baseURL = "https://nakamasato.github.io/hugo-sample"
 languageCode = "en-us"
-title = "Hugo Whisper Theme"
+title = "Hugo Sample"
 themesDir = "themes"
 theme = "hugo-whisper-theme"
 
@@ -31,22 +31,20 @@ summaryLength = 30
   google_analytics_id=""
   homepage_button_link = '/docs'
   homepage_button_text = 'Read The Docs'
-  homepage_intro = 'Whisper is a documentation theme built with Hugo. The design and functionality is intentionally minimal.'
-  homepage_image = '/images/terminal.gif'
 
   ## You can enable to add anchor links to header elements
   # enable_anchor_link = true
 
   [params.homepage_meta_tags]
-    meta_description = "Hugo Whisper is a documentation theme built with Hugo."
-    meta_og_title = "Hugo Whisper Theme"
+    meta_description = "Hugo sample is built with whisper theme."
+    meta_og_title = "Hugo sample"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-whisper.netlify.app"
+    meta_og_url = "//nakamasato.github.io"
     meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png"
     meta_og_description = "Hugo Whisper is a documentation theme built with Hugo."
     meta_twitter_card = "summary"
-    meta_twitter_site = "@zerostaticio"
-    meta_twitter_creator = "@zerostaticio"
+    meta_twitter_site = "@gymnstcs"
+    meta_twitter_creator = "@gymnstcs"
 
   [params.logo]
       mobile = "/images/logo-mobile.svg"
