--- a/docs/config.toml
+++ b/docs/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Hugo Sample"
 themesDir = "themes"
 theme = "hugo-whisper-theme"
-
+googleAnalytics = 'G-9NTB93RVPJ'
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 pygmentsUseClasses = true
